infra/k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: server.room-challenge.xyz
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: conferencing-service
              servicePort: 3000
    - host: arangodb.room-challenge.xyz
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: arangodb-service
              servicePort: 8529
